[package]
authors = ["Mike Walters <mike@flomp.net>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Rust driver for Sensirion SHT3x series digital temperature/humidity sensors."
documentation = "https://docs.rs/sht3x"
keywords = ["embedded-hal-driver", "sht30", "sht31", "sht35"]
license = "MIT OR Apache-2.0"
name = "sht3x"
repository = "https://github.com/miek/sht3x-rs"
version = "0.1.1"

[dependencies]
byteorder = { version = "1", default-features = false }
embedded-hal = "0.1.1"

[dev-dependencies]
linux-embedded-hal = "0.1.1"
